Fix horizontal scroll bar on character sentence

--- a/sass/cypher-system.scss
+++ b/sass/cypher-system.scss
@@ -47,6 +47,7 @@ form.csr {
         }
 
         & > .row {
+            margin: 0;
             padding-bottom: 8px;
         }
 
